--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,8 @@
     list-style: none;
 }
 
-.nav > ul li , .nav > ul li a {
+.nav > ul li,
+.nav > ul li a {
     margin: 10px 15px;
     align-items: center;
     display: flex;
