--- a/css/offers.css
+++ b/css/offers.css
@@ -161,6 +161,7 @@
 /* ----------Offers ------------ */
 .offers {
     padding-top: 0;
+    padding-bottom: 20px;
 }
 .offers > p {
     margin-top: 20px;
@@ -175,23 +176,220 @@
     margin-top: 10px;
 }
 
-/* ========== Pincode Selector ========== */
-/* .pincode-selector {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 1999;
-    background-color: rgba(0, 0, 0, 0.7);
+/* ============================== Day 5 ========================== */
+/* ---------- Offer list ------------ */
+.offers-coupons {
+    padding-top: 0px;
 }
 
-.pincode-selector > div {
-    position: sticky;
-    margin-left: auto;
-    width: 340px;
-    height: 100%;
-    background-color: white;
-    padding: 50px 40px;
+.filter-offers {
+    display: flex;
+    gap: 15px;
+}
+
+.filter-offers input {
+    display: none;
+}
+
+.filter-offers label {
+    display: inline-block;
+    padding: 6px 12px;
+    color: #556;
+    cursor: pointer;
+    border-radius: 30px;
+    border: 1px lightgrey solid;
+}
+
+.filter-offers :checked + label {
+    background: var(--main-color);
+    color: #fff;
+    font-weight: 600;
+    cursor: default;
+}
+
+.offer-list {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+.offer-list > div {
+    box-shadow: var(--shadow);
+    overflow: hidden;
     box-sizing: border-box;
-} */
+
+    border-radius: 10px / 100%;
+}
+.offer-list > div > div {
+    display: flex;
+}
+.offer-list img {
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+}
+.offer-list > div > div:first-child {
+    gap: 20px;
+    cursor: pointer;
+    padding: 15px;
+    background-color: rgb(248, 248, 248);
+}
+.offer-list > div > div:first-child > div {
+    display: flex;
+}
+.offer-list > div > div:first-child > div h3,
+.offer-list > div > div:first-child > div p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.offer-list > div > div:first-child > div h3 {
+    line-height: 25px;
+    min-height: 50px;
+    margin-bottom: 15px;
+}
+.offer-list > div > div:first-child > div p {
+    line-height: 20px;
+    min-height: 40px;
+    margin-bottom: 15px;
+}
+
+.offer-list > div > div:first-child > div i {
+    margin: 4px 10px;
+    color: var(--main-color);
+}
+
+.offer-list > div > div:last-child {
+    gap: 20px;
+    padding: 15px;
+}
+.offer-list > div > div:last-child h2 {
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 15px;
+    display: flex;
+    align-items: baseline;
+}
+.offer-list > div > div:last-child h2 > p {
+    font-size: 15px;
+    font-weight: 500;
+    margin-right: 8px;
+}
+.offer-list > div > div:last-child h2 > span {
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-left: auto;
+    color: var(--main-color);
+}
+
+/* --------- Offer Overall info --------- */
+.offer-info {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+.offer-info > div {
+    line-height: 30px;
+}
+
+.disclaimer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 14px;
+}
+
+/* ------------ FAQ ----------- */
+.FAQ {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 0;
+}
+.FAQ > div {
+    border: 1px lightgrey solid;
+    border-radius: 7px;
+    padding: 10px 15px;
+    box-sizing: border-box;
+}
+.FAQ > div > div {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    height: 30px;
+    align-items: center;
+}
+.FAQ h4 {
+    font-size: 14px;
+    font-weight: 600;
+}
+.FAQ i {
+    margin-right: 10px;
+    color: var(--main-color);
+}
+.FAQ p {
+    font-size: 15px;
+    line-height: 23px;
+}
+
+/* --------- Policy ---------- */
+.policy {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    box-shadow: var(--shadow-border);
+}
+.policy > div {
+    width: 25%;
+}
+.policy > div h3 {
+    margin: 10px 0;
+}
+
+/* -------- App Promo ---------- */
+.app-promo {
+    display: flex;
+    padding-top: 60px;
+}
+.app-promo > img {
+    width: 220px;
+}
+.app-promo > div {
+    padding-right: 220px;
+    margin: 0 auto;
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: column;
+}
+.app-promo > div p {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.app-promo > div > div {
+    display: flex;
+    gap: 20px;
+}
+.app-promo > div button {
+    height: 50px;
+    width: 200px;
+    border-radius: 5px;
+    background-color: grey;
+    border: none;
+    color: white;
+    padding-right: 10px;
+    text-align: start;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.app-promo > div button:hover {
+    background-color: rgb(105, 105, 105);
+}
+.app-promo > div button img {
+    height: 25px;
+    margin: auto 15px;
+}
